univention-updater (10.0.53-13) unstable; urgency=low

  * Bug #38248: Fix patchlevel for local repository

 -- Philipp Hahn <hahn@univention.de>  Mon, 13 Apr 2015 14:56:51 +0200

univention-updater (10.0.53-12) unstable; urgency=low

  * Bug #36044: Reword UCR variable description

 -- Philipp Hahn <hahn@univention.de>  Tue, 10 Mar 2015 10:56:38 +0100

univention-updater (10.0.53-11) unstable; urgency=low

  * Bug #37961: remove umc/apache restart from postup.sh 

 -- Felix Botner <botner@univention.de>  Mon, 09 Mar 2015 13:29:54 +0100

univention-updater (10.0.53-10) unstable; urgency=low

  * Bug #32543: Prevent app installation of univention-add-app on wrong server
    role

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 09 Mar 2015 11:24:36 +0100

univention-updater (10.0.53-9) unstable; urgency=medium

  * Bug #37033: prompt a confirmation dialogue when the browser window is
    closed or reloaded during an update process

 -- Alexander Kläser <klaeser@univention.de>  Fri, 27 Feb 2015 16:27:49 +0100

univention-updater (10.0.53-8) unstable; urgency=low

  * Bug #36044: Make timeout for fatal

 -- Philipp Hahn <hahn@univention.de>  Thu, 26 Feb 2015 15:45:32 +0100

univention-updater (10.0.53-7) unstable; urgency=low

  * Bug #36044: Catch one more socket timeout exception

 -- Philipp Hahn <hahn@univention.de>  Thu, 26 Feb 2015 12:33:48 +0100

univention-updater (10.0.53-6) unstable; urgency=low

  * Bug #36044: Set timeout of 600s for HTTP connections

 -- Philipp Hahn <hahn@univention.de>  Wed, 25 Feb 2015 16:21:03 +0100

univention-updater (10.0.53-5) unstable; urgency=low

  * Bug #37573: removed unneeded max-width style in updater.js.

 -- Johannes Keiser <keiser@univention.de>  Thu, 19 Feb 2015 16:38:05 +0100

univention-updater (10.0.53-4) unstable; urgency=low

  * Bug #37573: adjusted the styling for the updater dialog. 

 -- Johannes Keiser <keiser@univention.de>  Thu, 19 Feb 2015 16:28:05 +0100
